move notices slightly  higher to avoid overlapping content

--- a/app/assets/stylesheets/site/modules/m-notices.scss
+++ b/app/assets/stylesheets/site/modules/m-notices.scss
@@ -7,15 +7,11 @@
   text-align:center;
   width:100%;
   max-width: 1400px;
-  top: 90px;
+  top: 80px;
 }
 
 .m-notices p {
   padding:0;
   margin:2em 0 0 0;
   color: #fff;
-}
-
-.my-account .m-notices {
-  top: 80px;
 }
